2006-11-18  x42  <robin@gareus.org>
 - LASH remember window position

2006-11-17  x42  <robin@gareus.org>
 - change between all window modes:
   x11+imlib re-init/retain
 - added keystrokes to control OSD and offset
 * version v0.3.22

2006-11-16  x42  <robin@gareus.org>
 - properly convert escaped DnD text
 - portmidi quarter frames support

2006-11-15  x42  <robin@gareus.org>
 - SMPTE / MIDI TC drop frames code
 - alsa-midi: parse quarter frames (-C)
 - added midi options to cfgfile
 - removed command 'midi autoconnect'  and added 'midi reconnect'
 - crudly convert '%20' to whitespaces when receiving drag data. 
 - added '-P' --noping option to xjremote.

2006-11-14  rgareus  <robin@gareus.org>
 - preparing for proper midi+smpte conversion.
 - added debian files to SVN.

2006-11-14  rgareus  <robin@gareus.org>
 - qjadeo 
   - sync-menu radio buttons
   - position slider (sync off mode)
   - query xjadeo settings (OSD, sync) on startup
   - renamed fullscreen -> maximize
 - xjadeo: get osdcfg, get syncsource remote commands
 - Xv letterbox (-b, --leterbox, "window letterbox [on|off]")
 - use file-fps as delay when (0 >= delay ) 
 * version v0.3.21

2006-11-13  rgareus  <robin@gareus.org>
 - fixed drag/drop accept area.
 - catch signals + clean up 

2006-11-13  rgareus  <robin@gareus.org>
 - `ffmpeg-config` and other configure.ac updates.
 - lash=[yes|no] and mq=[yes|no] config file options.
 - a little more documentation.
 * version v0.3.20

2006-11-12  rgareus  <robin@gareus.org>
 - moved icons
 - completed lash support
 - unlink stale message queues
 - added x86_64*) ARCH=amd64 ;; (thanks to Detlef Reichelt & the PackMan-Team)
 - created xjremote man page.
 - message queues option becomes -Q
 - unlink option for xjremote

2006-11-11  rgareus  <robin@gareus.org>
 - implemented message queues: xjremote!
 - 'remote=yes|no' config file option
 - -L, --nolash
 - more variables stored in lash config.
 - preliminary qjadeo patch -> xjremote.
