@@ -1,11 +1,11 @@
 .\"     Title: qjadeo
 .\"    Author: 
 .\" Generator: DocBook XSL Stylesheets v1.71.0 <http://docbook.sf.net/>
-.\"      Date: 11/17/2006
+.\"      Date: 11/18/2006
 .\"    Manual: Manual Pages
 .\"    Source: 
 .\"
-.TH "QJADEO" "1" "11/17/2006" "" "Manual Pages"
+.TH "QJADEO" "1" "11/18/2006" "" "Manual Pages"
 .\" disable hyphenation
 .nh
 .\" disable justification (adjust text to left margin only)
@@ -24,6 +24,11 @@ supports different video file formats, video output libraries and sync sources.
 .SH "ENVIRONMENT"
 .PP
 if the XJADEO variable is set, qjadeo will assume that it holds the path to the xjadeo executable.
+.SH "SEE ALSO"
+.PP
+xjadeo(1)
+.PP
+xjremote(1)
 .SH "COPYRIGHT"
 Copyright \(co 2005, 2006 Robin Gareus, Luis Garrido
 .br
