@@ -1,11 +1,11 @@
 .\"     Title: xjadeo
 .\"    Author: 
 .\" Generator: DocBook XSL Stylesheets v1.71.0 <http://docbook.sf.net/>
-.\"      Date: 11/17/2006
+.\"      Date: 11/18/2006
 .\"    Manual: Manual Pages
 .\"    Source: 
 .\"
-.TH "XJADEO" "1" "11/17/2006" "" "Manual Pages"
+.TH "XJADEO" "1" "11/18/2006" "" "Manual Pages"
 .\" disable hyphenation
 .nh
 .\" disable justification (adjust text to left margin only)
@@ -308,6 +308,11 @@ becomes
 \fBquiet=yes\fR).
 .PP
 currently supported rc KEYS: fps, fontfile, lash, mq, quiet, seek, verbose and videomode.
+.SH "SEE ALSO"
+.PP
+qjadeo(1)
+.PP
+xjremote(1)
 .SH "COPYRIGHT"
 Copyright \(co 2005, 2006 Robin Gareus, Luis Garrido
 .br
