@@ -1,11 +1,11 @@
 .\"     Title: xjremote
 .\"    Author: 
 .\" Generator: DocBook XSL Stylesheets v1.71.0 <http://docbook.sf.net/>
-.\"      Date: 11/17/2006
+.\"      Date: 11/18/2006
 .\"    Manual: Manual Pages
 .\"    Source: 
 .\"
-.TH "XJREMOTE" "1" "11/17/2006" "" "Manual Pages"
+.TH "XJREMOTE" "1" "11/18/2006" "" "Manual Pages"
 .\" disable hyphenation
 .nh
 .\" disable justification (adjust text to left margin only)
@@ -79,6 +79,11 @@ Prints version information end exits.
 .SH "ENVIRONMENT"
 .PP
 If the XJADEO variable is set, xjremote will assume that it holds the path to the xjadeo executable.
+.SH "SEE ALSO"
+.PP
+xjadeo(1)
+.PP
+qjadeo(1)
 .SH "COPYRIGHT"
 Copyright \(co 2005, 2006 Robin Gareus, Luis Garrido
 .br
