@@ -1,5 +1,6 @@
 2006-11-18  x42  <robin@gareus.org>
  - LASH remember window position
+ - key bindings to scale video output
 
 2006-11-17  x42  <robin@gareus.org>
  - change between all window modes:
